Mobile menu added

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="font-awesome/css/fontawesome.min.css">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/hover.css">
+    <link rel="stylesheet" href="css/media.css">
 
     <title>Portfolio | MH Shakil</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="logo">MH SHAKIL</div>
+            <a href="index.html" class="logo">MH SHAKIL</a>
             <nav>
                 <a href="#home"><i class="hover"></i><i class="hover blur"></i>Home</a>
                 <a href="#about"><i class="hover"></i><i class="hover blur"></i>About</a>
