Mobile menu active effect added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <a href="index.html" class="logo">MH SHAKIL</a>
             <nav>
-                <a href="#home"><i class="hover"></i><i class="hover blur"></i>Home</a>
+                <a href="#home" class="focused"><i class="hover focus"></i><i class="hover blur"></i>Home</a>
                 <a href="#about"><i class="hover"></i><i class="hover blur"></i>About</a>
                 <a href="#skills"><i class="hover"></i><i class="hover blur"></i>Skills</a>
                 <a href="#projects"><i class="hover"></i><i class="hover blur"></i>Projects</a>
