Show message after 2 seconds

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
     <title>Portfolio | MH Shakil</title>
 </head>
 <body>
+    <div class="msg_bg">
+        <div class="msg_box">
+            <div class="msg_heading">
+                <h3>Message</h3>
+                <div class="x_btn">
+                    <div class="cover">
+                        <i class="hover"></i><i class="hover blur"></i>
+                        <i class="fa-solid fa-xmark" onclick="hideMessage()"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="message">
+                <p>This website is currently under development. Some buttons might not work. </p>
+            </div>
+        </div>
+    </div>
     <header>
         <div class="container">
             <a href="index.html" class="logo">MH SHAKIL</a>
