Fixed some issues

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="message">
-                <p>This website is currently under development. Some buttons might not work. </p>
+                <p>This website is currently under development. Some options might not work. </p>
             </div>
         </div>
     </div>
